Day 19: part 2 solved. backwards thinking and memoization. Meh.